<resources>
    <string name="app_name">SftaffManagementApp</string>
    <string name="name_account" />
    <string name="name_lable_account">Tên đăng nhập</string>
    <string name="password_lable_account">Mật khẩu</string>
    <string name="password_account" />
    <string name="chinhsach_textview">Chính sách</string>
    <string name="quenmatkhau_textview">Quên mật khẩu ?</string>
    <string name="dangnhap_button">Đăng nhập</string>
    <string name="trangchu_tittle">Trang chủ</string>
    <string name="điemanh_button">Điểm danh</string>
    <string name="quanlycaiban_button">Quản lý cái bàn</string>
    <string name="chucvu_textview">Phục vụ</string>
    <string name="ten_textview">Đặng Ngọc Quốc Bảo</string>
    <string name="chuthich1_textview">chú thích 1</string>
    <string name="chuthich2_textview">Chú thích 2</string>
    <string name="infor_button">Infor</string>
    <string name="pass_button">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hoten_label">Họ tên</string>
    <string name="sodienthoai_label">Số điện thoại</string>
    <string name="diachi_label">Địa chỉ</string>
    <string name="cappnhatButton">Cập nhật</string>
    <string name="matkhaucu_label">Mật khẩu cũ</string>
    <string name="nhaplaimatkhaucu_label">Nhập lại mật khẩu cũ</string>
    <string name="matkhaumoi_label">Mật khẩu mới</string>
</resources>