<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountPass"
    android:background="@android:color/transparent">


    <TextView
        android:id="@+id/matkhaucuTextView"
        android:fontFamily="@font/comfortaa_regular"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/matkhaucu_label"
        android:textColor="@color/button_backgroundcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/matkhaucuEditText"
        android:fontFamily="@font/comfortaa_regular"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/text_inTextField"
        android:textSize="14sp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matkhaucuTextView"
        android:background="@drawable/textfield_style"
        />


    <TextView
        android:id="@+id/nhaplaimatkhaucuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comfortaa_regular"
        android:textSize="14sp"
        android:text="@string/nhaplaimatkhaucu_label"
        android:textColor="@color/button_backgroundcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matkhaucuEditText" />

    <EditText
        android:id="@+id/nhaplaimatkhaucuEditText"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/text_inTextField"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/comfortaa_regular"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nhaplaimatkhaucuTextView"
        android:background="@drawable/textfield_style"/>

    <TextView
        android:id="@+id/matkhaumoiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/button_backgroundcolor"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/matkhaumoi_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nhaplaimatkhaucuEditText"
        />


    <EditText
        android:id="@+id/matkhaumoiEditText"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/text_inTextField"
        android:fontFamily="@font/comfortaa_regular"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matkhaumoiTextView"
        android:background="@drawable/textfield_style"/>

    <Button
        android:id="@+id/capnhatButton"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/comfortaa_regular"
        android:layout_marginTop="8dp"
        android:text="@string/cappnhatButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matkhaumoiEditText"
        android:backgroundTint="@color/button_backgroundcolor"/>
</androidx.constraintlayout.widget.ConstraintLayout>